# MOEI-x-42AD-AgentEra-AI-Hackathon

./: .env.example  .gitignore  Agent42_Hackathon_Deck.pptx  CLAUDE.md  DEMO_RUN_CARD.md  LICENSE  Makefile  Procfile  QA_CRUSHER.md  README-Demo.md  README-WhatsApp-Meta.md  README.md  pyproject.toml  ~$Agent42_Hackathon_Deck.pptx
.claude/: settings.json  settings.local.json
agents/: pyproject.toml
agents/hassan/: __init__.py
agents/hassan/guardrails/: __init__.py  bias.py  pii.py  prompt_injection.py
agents/hassan/knowledge/: __init__.py  moei_catalog.py
agents/hassan/llm/: __init__.py  client.py
agents/hassan/memory/: __init__.py  episodic.py  knowledge.py  short_term.py
agents/hassan/models/: escalation_clf.joblib
agents/hassan/observability/: __init__.py  langfuse_setup.py
agents/hassan/supervisor/: graph.py  nodes.py  prompts.py  schemas.py  state.py
agents/hassan/tools/: __init__.py  arrears_engine.py  doc_ocr.py  risk_score.py  szhp_rules.py  uaepass.py
agents/hassan/voice/: __init__.py  livekit_worker.py
agents/hassan/workers/: __init__.py  crm.py  domain.py  escalation_model.py  general.py  housing.py  knowledge.py  postcall.py
agents/tests/: test_escalation_rules.py  test_guardrails.py  test_housing_worker.py  test_sla_engine.py  test_supervisor_smoke.py  test_szhp_rules.py
apps/api/app/: main.py
apps/api/app/auth/: __init__.py  uaepass.py
apps/api/app/core/: config.py  correlation.py  db.py  dispatcher.py  errors.py  language.py  whatsapp_meta.py
apps/api/app/routes/: activity.py  admin_auth.py  analytics.py  auth.py  automation.py  cases.py  chat.py  copilot.py  crm.py  documents.py  exec_dashboard.py  feedback.py  health.py  intel.py  mock_uaepass.py  notifications.py  recordings.py  search.py  szhp.py  voice.py  whatsapp.py
apps/api/app/schemas/: message.py
apps/api/tests/: conftest.py  test_document_classification.py  test_whatsapp_meta.py
apps/web/: next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/account/: page.tsx
apps/web/src/app/admin/: layout.tsx
apps/web/src/app/admin/agents/: page.tsx
apps/web/src/app/admin/analytics/: page.tsx
apps/web/src/app/admin/audit/: page.tsx
apps/web/src/app/admin/calls/: page.tsx
apps/web/src/app/admin/calls/[id]/: page.tsx
apps/web/src/app/admin/citizens/: page.tsx
apps/web/src/app/admin/citizens/[id]/: page.tsx
apps/web/src/app/admin/copilot/: page.tsx
apps/web/src/app/admin/exec/: page.tsx
apps/web/src/app/admin/intelligence/: page.tsx
apps/web/src/app/admin/login/: page.tsx
apps/web/src/app/admin/rescheduling/: page.tsx
apps/web/src/app/automation/: page.tsx
apps/web/src/app/call/: page.tsx
apps/web/src/app/chat/: page.tsx
apps/web/src/app/csat/: page.tsx
apps/web/src/app/mobile/: page.tsx
apps/web/src/app/rescheduling/: page.tsx
apps/web/src/app/sign/: page.tsx
apps/web/src/components/: AccessibilityToggle.tsx  AdminHeader.tsx  DocumentUpload.tsx  LoginGate.tsx  MoeiFooter.tsx  MoeiHeader.tsx  SmartSearch.tsx  WhatsAppTryCard.tsx
apps/web/src/lib/: auth.ts  automation.ts  i18n-core.ts  i18n.tsx  utils.ts
data/intel/: countries.json
data/moei/: SZHP_Reschedule_Arrears_2023-2025.xlsx  services.json
deployment/cpanel-subdomain-redirect/: .htaccess  index.html
docs/: 90-day-pilot.md  MOEI_Omnichannel_AI_Dataset_Hackathon (1) (2).xlsx  build-plan.md  challenge 3 Omnichannel AI Customer Engagement Agent.md  deck-outline.md  demo-script.md  feasibility-roadmap.md  pdpl-mapping.md  uaepass-integration.md
infra/: docker-compose.yml
infra/postgres/: init.sql  init_v10_intel.sql  init_v10_sla.sql  init_v11_customer_documents.sql  init_v2.sql  init_v3.sql  init_v4_knowledge.sql  init_v5_recordings.sql  init_v6_citizens.sql  init_v7_geo.sql  init_v8_dataset.sql  init_v9_szhp.sql  init_v9_whatsapp.sql
scripts/: crawl_moei.py  create_submission_pack.py  gen_deck.py  gen_synthetic_data.py  import_dataset.py  import_intel.py  import_services_catalog.py  import_szhp.py  make_speaker_notes.py  retag_moei_domains.py  scrape_moei.py  seed_demo_citizen.py  seed_omnichannel.py  set_whatsapp_profile.py  smoke_demo.sh  train_escalation_model.py
submission/: Agent42_MOEI_Omnichannel_AI_Pitch_Deck.pptx  Agent42_Submission_Answers.md
