[project]
name = "hassan"
version = "0.1.0"
description = "Hassan — Hyper-Adaptive Smart Service Agent for the Nation (MOEI × 42 AgentEra)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "AgentEra Team" }]
dependencies = [
  # API
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "python-multipart>=0.0.12",
  "httpx>=0.27",
  "orjson>=3.10",
  "loguru>=0.7",

  # LangGraph supervisor + LangChain glue
  "langgraph>=0.2.50",
  "langgraph-checkpoint-postgres>=2.0",
  "langchain>=0.3",
  "langchain-core>=0.3",
  "langchain-community>=0.3",
  "langchain-openai>=0.2",        # used as Groq/OpenRouter OpenAI-compatible client
  "langchain-google-genai>=2.0",
  "langchain-ollama>=0.2",

  # Per-channel worker agents
  "agno>=0.2",                    # formerly Phidata

  # Memory + vector
  "mem0ai>=0.1.50",
  "qdrant-client>=1.12",
  "redis>=5.2",

  # RAG / docs
  "docling>=2.7",                 # IBM, MIT, federal-clean
  "unstructured>=0.16",

  # Observability
  "langfuse>=2.55",

  # Guardrails / federal-grade
  "presidio-analyzer>=2.2",
  "presidio-anonymizer>=2.2",

  # Channels
  "twilio>=9.3",
  "sse-starlette>=2.1",
  "itsdangerous>=2.2",
  "python-dotenv>=1.0",

  # DB
  "sqlalchemy[asyncio]>=2.0",
  "psycopg[binary]>=3.2",
  "asyncpg>=0.30",

  # ML
  "joblib>=1.5.3",
  "scikit-learn>=1.9.0",
]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
voice = [
  "livekit-agents>=0.11",
  "livekit-plugins-deepgram>=0.6",
  "livekit-plugins-elevenlabs>=0.7",
  "livekit-plugins-openai>=0.8",
  "livekit-plugins-silero>=0.7",
  "faster-whisper>=1.1",
]
dev = [
  "ruff>=0.7",
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "ipython>=8.29",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "ASYNC", "RUF"]
ignore = ["S101"]    # allow assert in tests

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["apps/api/tests", "agents/tests"]

[tool.setuptools]
package-dir = { "" = "agents" }

[tool.setuptools.packages.find]
where = ["agents"]
include = ["hassan*"]
