[project]
name = "hassan"
version = "0.1.0"
description = "Hassan — Hyper-Adaptive Smart Service Agent for the Nation (MOEI × 42 AgentEra)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "AgentEra Team" }]
dependencies = [
  # API
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "python-multipart>=0.0.12",     # FastAPI Form/File parsing (documents, recordings, uaepass)
  "httpx>=0.27",
  "loguru>=0.7",

  # LangGraph supervisor + LangChain glue — only the sub-packages we import directly.
  # (The `langchain` meta-package, langchain-community and langchain-ollama were never imported.)
  "langgraph>=0.2.50",
  "langchain-core>=0.3",
  "langchain-openai>=0.2",        # Groq/OpenAI-compatible client (also Jais via the HF router)
  "langchain-google-genai>=2.0",  # Gemini — Arabic / long-context fallback

  # Memory — short-term cross-channel buffer
  "redis>=5.2",

  # Observability
  "langfuse>=2.55",

  # Channels
  "twilio>=9.3",
  "sse-starlette>=2.1",
  "itsdangerous>=2.2",
  "python-dotenv>=1.0",

  # DB — raw psycopg + its connection pool. The code uses psycopg directly (no SQLAlchemy/asyncpg);
  # the `pool` extra replaces the psycopg-pool that langgraph-checkpoint-postgres used to pull in.
  "psycopg[binary,pool]>=3.2",

  # ML — escalation classifier. scikit-learn is needed at runtime to unpickle the joblib model.
  "joblib>=1.5.3",
  "scikit-learn>=1.9.0",
]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
# Opt-in episodic memory. Mem0 powers cross-channel long-term recall; the code lazy-imports it
# and no-ops without MEM0_API_KEY (the short-term Redis buffer still carries recent turns), so a
# fresh `uv sync` stays lean. Install with: uv sync --extra integrations
integrations = [
  "mem0ai>=0.1.50",
]
# Bootstrap-only: pandas + openpyxl read the official MOEI hackathon workbook (.xlsx) in the
# one-time demo-data import scripts (scripts/import_dataset.py, scripts/import_services_catalog.py).
# Nothing in the running app (apps/, agents/) imports them, so the default `uv sync` / deploy stays
# lean. `make up` installs this automatically via `uv run --extra dataset` for the data-load step.
dataset = [
  "pandas>=2.2",
  "openpyxl>=3.1",
]
# Opt-in Anthropic Claude path (LLMRole REASONER/COMPOSER/CRITIC when HASSAN_USE_CLAUDE=1).
# Off by default — the default cascade is OpenAI → Groq. Install with: uv sync --extra anthropic
anthropic = [
  "langchain-anthropic>=0.3",
]
voice = [
  "livekit-agents>=0.11",
  "livekit-plugins-deepgram>=0.6",
  "livekit-plugins-elevenlabs>=0.7",
  "livekit-plugins-openai>=0.8",
  "livekit-plugins-silero>=0.7",
]
dev = [
  "ruff>=0.7",
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "ipython>=8.29",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "ASYNC", "RUF"]
ignore = ["S101"]    # allow assert in tests

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["apps/api/tests", "agents/tests"]

[tool.setuptools]
package-dir = { "" = "agents" }

[tool.setuptools.packages.find]
where = ["agents"]
include = ["hassan*"]
