[project]
name = "hassan-agents"
version = "0.1.0"
description = "Agent42 multi-agent runtime: LangGraph supervisor + Agno per-channel workers"
requires-python = ">=3.12"
dependencies = [
  "langgraph>=0.2.50",
  "langchain-core>=0.3",
  "pydantic>=2.9",
  "loguru>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hassan"]
